worked on appt files, tring to work with times right now and getting it displayed on tableview properly.

--- a/src/Resource/Language/language_en.properties
+++ b/src/Resource/Language/language_en.properties
@@ -9,10 +9,11 @@ password=Password
 location=location
 login=login
 cancel=cancel
-cancelError=Do you wish to exit?
+cancelConfirmation=Do you wish to exit?
 errorDialog=Error Dialog
 usernameRequired=Username is required
 passwordRequired=Password is required
+usernameAndPasswordRequired=Username and Password is required.
 error=Error
 information=Info
 invalidUsernamePassword=Username and/or Password is incorrect
