fixed time conversions and upcoming alerts. finished the create appointment requirements. next will be implementing the update appointment requirement

--- a/src/Resource/Language/language_en.properties
+++ b/src/Resource/Language/language_en.properties
@@ -3,14 +3,13 @@ language_en.properties
 country=US
 timezone=Time Zone
 description=WGU C195 Thais Ribeiro
-title=LOGIN
+title=Title
 userName=Username
 password=Password
 location=location
 login=login
 cancel=cancel
 cancelConfirmation=Do you wish to exit?
-errorDialog=Error Dialog
 usernameRequired=Username is required
 passwordRequired=Password is required
 usernameAndPasswordRequired=Username and Password is required.
@@ -18,9 +17,33 @@ error=Error
 information=Info
 invalidUsernamePassword=Username and/or Password is incorrect
 loadScreenError=Error loading screen
-appointmentAlert=Upcoming Appointment Alert
+
+
+appointmentAlert=Upcoming Appointments Alert
 noUpcomingAppointments= No upcoming appointments within 15 minutes
-lessThanFifteen=Appointment starts in less than 15 minutes
+lessThanFifteen=Upcoming appointments in the next 15 minutes!!
+
+
 appointmentID=Appointment ID:
 date=Date
 time=Time:
+
+errorSaving=Error saving
+noApptSelected = Please select an appointment to update.
+errorUpdating = Error updating appointment
+errorDeleting = Error deleting appointment
+
+appointments=Appointments
+customers=Customers
+reports=Reports
+
+createAppt=Create Appointment
+updateAppt=Update Appointment
+deleteAppt= Delete Appointment
+apptCreated=Appointment successfully created!
+apptUpdate = Successfully updated appointment!
+apptDeleted = Successfully deleted appointment!
+confirmDelete = Are you sure you want to delete?
+
+overlapping = Overlapping appointments
+overlap = Appointment you are trying to create overlaps with another existing appointment
