--- a/src/Resource/Language/language_fr.properties
+++ b/src/Resource/Language/language_fr.properties
@@ -1,25 +1,48 @@
-language_fr.properties
+language_en.properties
 
-country=France
+country=US
 timezone=Fuseau horaire
-description=WGU C195 Thais Ribeiro
+description=WGU C195 Thaïs Ribeiro
 title=SE CONNECTER
 userName=Nom d'utilisateur
 password=Mot de passe
 location=emplacement
 login=se connecter
 cancel=Annuler
-cancelError=Souhaitez-vous sortir ?
-errorDialog=Boîte de dialogue d'erreur
+cancelConfirmation=Souhaitez-vous sortir ?
 usernameRequired=Nom d'utilisateur est nécessaire
 passwordRequired=Mot de passe requis
+usernameAndPasswordRequired=Le nom d'utilisateur et le mot de passe sont requis.
 error=Erreur
-information=Info
+
 invalidUsernamePassword=Le nom d'utilisateur et / ou le mot de passe est incorrect
-loadScreenError=Erreur d'écran de chargement
+
+
 appointmentAlert=Alerte de rendez-vous à venir
 noUpcomingAppointments= Aucun rendez-vous à venir dans les 15 minutes
 lessThanFifteen=Le rendez-vous commence dans moins de 15 minutes
+
+
 appointmentID=Numéro de rendez-vous :
-date=Date
+date=Date:
 time=Temps:
+
+errorSaving=Erreur lors de l'enregistrement
+errorUpdating = Erreur lors de la mise à jour du rendez-vous
+noApptSelected  Veuillez sélectionner un rendez-vous à mettre à jour.
+errorDeleting = Erreur lors de la suppression du rendez-vous
+
+appointments=Rendez-vous
+customers=Clientes
+reports=Rapports
+
+createAppt=Créer un rendez-vous
+updateAppt=Mettre à jour le rendez-vous
+deleteAppt= Supprimer le rendez-vous
+apptCreated=Rendez-vous créé avec succès !
+apptUpdate = Rendez-vous mis à jour avec succès !
+apptDeleted = Rendez-vous supprimé avec succès !
+confirmDelete = Etes-vous sûr que vous voulez supprimer?
+
+overlapping = Des rendez-vous qui se chevauchent
+overlap = Rendez-vous pour lequel vous essayez de créer des chevauchements avec un autre rendez-vous existant
