worked on creating appointments and customers. with all working functionality and error messages. started on updating appointments which is working and now working on updating customers

--- a/src/Resource/Language/language_en.properties
+++ b/src/Resource/Language/language_en.properties
@@ -1,12 +1,38 @@
 language_en.properties
 
-country=US
+country=Country
 timezone=Time Zone
-description=WGU C195 Thais Ribeiro
+subheader=WGU C195 Thais Ribeiro
+
+
 title=Title
 userName=Username
 password=Password
 location=location
+description = Description
+contact=Contact
+type=Type
+startDate = Start Date
+endDate = End Date
+startTime= Start Time
+endTime = End Time
+customerID = Customer ID
+userID= User ID
+apptID = Appt ID
+allAppts = All Appointments
+byMonth = Appointments this month
+byWeek = Appointments this week
+filterLabel = Filter Appointments
+actionsLabel = Actions
+name = Name
+address = Address
+postal = Postal Code
+division = Division
+phone = Phone Number
+appts = Appointments
+
+
+
 login=login
 cancel=cancel
 cancelConfirmation=Do you wish to exit?
@@ -30,8 +56,15 @@ time=Time:
 
 errorSaving=Error saving
 noApptSelected = Please select an appointment to update.
-errorUpdating = Error updating appointment
-errorDeleting = Error deleting appointment
+noCustomersSelected = Please select a customer to update.
+errorUpdating = Error updating 
+errorDeleting = Error deleting 
+errorCreatingCustomer = Error Creating Customer
+fillInAllFieldsError = Please make sure all fields are inputted
+fillInAllFieldsErrorTitle = Missing Fields
+countryAndDivisionSelectionMissingTitle = Missing Country or Division
+countryAndDivisionSelectionMissingTitleError = Please make sure you have selected a country and division
+
 
 appointments=Appointments
 customers=Customers
@@ -43,7 +76,18 @@ deleteAppt= Delete Appointment
 apptCreated=Appointment successfully created!
 apptUpdate = Successfully updated appointment!
 apptDeleted = Successfully deleted appointment!
+
+createCustomer = Create Customer
+updateCustomer = Update Customer
+deleteCustomer = Delete Customer
+customerCreated =  Customer Created!
+customerUpdated = Customer Updated!
+customerDeleted =Customer Deleted!
+
 confirmDelete = Are you sure you want to delete?
 
 overlapping = Overlapping appointments
 overlap = Appointment you are trying to create overlaps with another existing appointment
+add = Add
+back = Back
+save = Save
