--- a/src/Resource/Language/language_fr.properties
+++ b/src/Resource/Language/language_fr.properties
@@ -1,12 +1,39 @@
 language_en.properties
 
-country=US
+country=pays
 timezone=Fuseau horaire
-description=WGU C195 Thaïs Ribeiro
+subheader=WGU C195 Thaïs Ribeiro
+
 title=SE CONNECTER
 userName=Nom d'utilisateur
 password=Mot de passe
 location=emplacement
+
+
+description = Description
+contact=Contact
+type=Taper
+startDate = Date de début
+endDate = Date de fin
+startTime= Heure de début
+endTime = Heure de début
+customerID = ID de client
+userID= ID de l'utilisateur
+apptID= ID d'application
+allAppts = Tous les rendez-vous
+byMonth = Rendez-vous ce mois-ci
+byWeek = Rendez-vous cette semaine
+searchButton = Recherche
+searchText = recherche par ID, titre, lieu....
+filterLabel = Filtrer les rendez-vous
+actionsLabel = Actions
+name = nom
+postal = Code Postal
+phone = Numéro de téléphone
+address = Adresse
+appts = Rendez-vous
+
+
 login=se connecter
 cancel=Annuler
 cancelConfirmation=Souhaitez-vous sortir ?
@@ -29,8 +56,16 @@ time=Temps:
 
 errorSaving=Erreur lors de l'enregistrement
 errorUpdating = Erreur lors de la mise à jour du rendez-vous
+errorCreatingCustomer = Erreur lors de la création du client
 noApptSelected  Veuillez sélectionner un rendez-vous à mettre à jour.
 errorDeleting = Erreur lors de la suppression du rendez-vous
+fillInAllFieldsError = Veuillez vous assurer que tous les champs sont renseignés
+Champs manquants
+noCustomersSelected = Veuillez sélectionner un client à mettre à jour.
+
+countryAndDivisionSelectionMissingTitle = Pays ou division manquant
+countryAndDivisionSelectionMissingTitleError = Veuillez vous assurer d'avoir sélectionné un pays et une division
+
 
 appointments=Rendez-vous
 customers=Clientes
@@ -39,10 +74,22 @@ reports=Rapports
 createAppt=Créer un rendez-vous
 updateAppt=Mettre à jour le rendez-vous
 deleteAppt= Supprimer le rendez-vous
-apptCreated=Rendez-vous créé avec succès !
-apptUpdate = Rendez-vous mis à jour avec succès !
-apptDeleted = Rendez-vous supprimé avec succès !
+apptCreated=Rendez-vous créé avec succès!
+apptUpdate = Rendez-vous mis à jour avec succès!
+apptDeleted = Rendez-vous supprimé avec succès!
+
+createCustomer =Créer un client
+updateCustomer =Mettre à jour le client
+deleteCustomer =Supprimer le client
+customerCreated =Client créé !
+customerUpdated =Client mis à jour !
+customerDeleted =Client supprimé !
+
+
 confirmDelete = Etes-vous sûr que vous voulez supprimer?
 
 overlapping = Des rendez-vous qui se chevauchent
 overlap = Rendez-vous pour lequel vous essayez de créer des chevauchements avec un autre rendez-vous existant
+add = ajouter
+back =dos
+save = sauvegarder
