fixed all bugs in the files. Finished update appt and customer pages meeting requirements for the project.
Signed-off-by: tyribeiro <thais.earibeiro@gmail.com>

--- a/src/Resource/Language/language_en.properties
+++ b/src/Resource/Language/language_en.properties
@@ -91,3 +91,4 @@ overlap = Appointment you are trying to create overlaps with another existing ap
 add = Add
 back = Back
 save = Save
+dateTimeError=Appointment End Date/Time is before the Start Date/Time. Please make sure appointment ends after start.
