--- a/src/Resource/Language/language_fr.properties
+++ b/src/Resource/Language/language_fr.properties
@@ -93,3 +93,4 @@ overlap = Rendez-vous pour lequel vous essayez de créer des chevauchements avec 
 add = ajouter
 back =dos
 save = sauvegarder
+dateTimeError=La date/heure de fin du rendez-vous est antérieure à la date/heure de début. Veuillez vous assurer que le rendez-vous se termine après le début.
