worked on reports fxmls and started on controllers.
Signed-off-by: tyribeiro <thais.earibeiro@gmail.com>

--- a/src/Resource/Language/language_en.properties
+++ b/src/Resource/Language/language_en.properties
@@ -30,6 +30,8 @@ postal = Postal Code
 division = Division
 phone = Phone Number
 appts = Appointments
+month=Month
+total=Total
 
 
 
@@ -69,6 +71,9 @@ countryAndDivisionSelectionMissingTitleError = Please make sure you have selecte
 appointments=Appointments
 customers=Customers
 reports=Reports
+totalAppts=Total Appointments Report
+contactsSchedule=Contact Schedule Report
+customerActivity=Customer Activity Report
 
 createAppt=Create Appointment
 updateAppt=Update Appointment
