--- a/src/Resource/Language/language_fr.properties
+++ b/src/Resource/Language/language_fr.properties
@@ -84,6 +84,12 @@ deleteCustomer =Supprimer le client
 customerCreated =Client créé !
 customerUpdated =Client mis à jour !
 customerDeleted =Client supprimé !
+totalAppts=Rapport sur le total des rendez-vous
+contactsSchedule=Rapport sur le calendrier des contacts
+customerActivity=Rapport d'activité client
+month=Mois
+total=Totale
+
 
 
 confirmDelete = Etes-vous sûr que vous voulez supprimer?
