working on the 1st report
Signed-off-by: tyribeiro <thais.earibeiro@gmail.com>

--- a/src/Resource/Language/language_en.properties
+++ b/src/Resource/Language/language_en.properties
@@ -31,7 +31,7 @@ division = Division
 phone = Phone Number
 appts = Appointments
 month=Month
-total=Total
+totalApptsLabel=Total Appointments
 
 
 
@@ -61,6 +61,7 @@ noApptSelected = Please select an appointment to update.
 noCustomersSelected = Please select a customer to update.
 errorUpdating = Error updating 
 errorDeleting = Error deleting 
+errorDeletingAppt=Please choose a appointment to delete
 errorCreatingCustomer = Error Creating Customer
 fillInAllFieldsError = Please make sure all fields are inputted
 fillInAllFieldsErrorTitle = Missing Fields
