--- a/src/Resource/Language/language_fr.properties
+++ b/src/Resource/Language/language_fr.properties
@@ -59,6 +59,8 @@ errorUpdating = Erreur lors de la mise à jour du rendez-vous
 errorCreatingCustomer = Erreur lors de la création du client
 noApptSelected  Veuillez sélectionner un rendez-vous à mettre à jour.
 errorDeleting = Erreur lors de la suppression du rendez-vous
+errorDeletingAppt=Veuillez choisir un rendez-vous à supprimer
+
 fillInAllFieldsError = Veuillez vous assurer que tous les champs sont renseignés
 Champs manquants
 noCustomersSelected = Veuillez sélectionner un client à mettre à jour.
@@ -88,7 +90,7 @@ totalAppts=Rapport sur le total des rendez-vous
 contactsSchedule=Rapport sur le calendrier des contacts
 customerActivity=Rapport d'activité client
 month=Mois
-total=Totale
+totalApptsLabel=Totale Rendez-vous
 
 
 
