trying to fix time zone issues
Signed-off-by: tyribeiro <thais.earibeiro@gmail.com>

--- a/src/Resource/Language/language_en.properties
+++ b/src/Resource/Language/language_en.properties
@@ -34,7 +34,6 @@ month=Month
 totalApptsLabel=Total Appointments
 
 
-
 login=login
 cancel=cancel
 cancelConfirmation=Do you wish to exit?
@@ -63,11 +62,12 @@ errorUpdating = Error updating
 errorDeleting = Error deleting 
 errorDeletingAppt=Please choose a appointment to delete
 errorCreatingCustomer = Error Creating Customer
+businessHourError=Appointment Time selected is outside of business hours /n Business Hours are 8:00 - 22:00 eastern time
 fillInAllFieldsError = Please make sure all fields are inputted
 fillInAllFieldsErrorTitle = Missing Fields
 countryAndDivisionSelectionMissingTitle = Missing Country or Division
 countryAndDivisionSelectionMissingTitleError = Please make sure you have selected a country and division
-
+selectCustomer="Please select a customer to delete"
 
 appointments=Appointments
 customers=Customers
@@ -75,21 +75,23 @@ reports=Reports
 totalAppts=Total Appointments Report
 contactsSchedule=Contact Schedule Report
 customerActivity=Customer Activity Report
+generateReport=Generate Report
 
 createAppt=Create Appointment
 updateAppt=Update Appointment
 deleteAppt= Delete Appointment
 apptCreated=Appointment successfully created!
-apptUpdate = Successfully updated appointment!
+apptUpdated=Successfully updated appointment!
 apptDeleted = Successfully deleted appointment!
+customerUpdated=Successfully updated customer!
+customerDeleted=Successfully deleted customer!
+customerCreated=Customer successfully created!
+
+
 
 createCustomer = Create Customer
 updateCustomer = Update Customer
 deleteCustomer = Delete Customer
-customerCreated =  Customer Created!
-customerUpdated = Customer Updated!
-customerDeleted =Customer Deleted!
-
 confirmDelete = Are you sure you want to delete?
 
 overlapping = Overlapping appointments
