--- a/src/Resource/Language/language_fr.properties
+++ b/src/Resource/Language/language_fr.properties
@@ -91,6 +91,7 @@ contactsSchedule=Rapport sur le calendrier des contacts
 customerActivity=Rapport d'activité client
 month=Mois
 totalApptsLabel=Totale Rendez-vous
+generateReport=Générer un rapport
 
 
 
