finished my final report
Signed-off-by: tyribeiro <thais.earibeiro@gmail.com>

--- a/src/Resource/Language/language_en.properties
+++ b/src/Resource/Language/language_en.properties
@@ -12,6 +12,8 @@ location=location
 description = Description
 contact=Contact
 type=Type
+apptTitle=Appt Title
+apptType=Appt Type
 startDate = Start Date
 endDate = End Date
 startTime= Start Time
@@ -32,7 +34,7 @@ phone = Phone Number
 appts = Appointments
 month=Month
 totalApptsLabel=Total Appointments
-
+appointmentsByCustomerID=Total Appointments by customer ID
 
 login=login
 cancel=cancel
@@ -68,6 +70,7 @@ fillInAllFieldsErrorTitle = Missing Fields
 countryAndDivisionSelectionMissingTitle = Missing Country or Division
 countryAndDivisionSelectionMissingTitleError = Please make sure you have selected a country and division
 selectCustomer="Please select a customer to delete"
+contactSchedule=Contact Schedule
 
 appointments=Appointments
 customers=Customers
