started in java doc
Signed-off-by: tyribeiro <thais.earibeiro@gmail.com>

--- a/src/Resource/Language/language_en.properties
+++ b/src/Resource/Language/language_en.properties
@@ -3,8 +3,6 @@ language_en.properties
 country=Country
 timezone=Time Zone
 subheader=WGU C195 Thais Ribeiro
-
-
 title=Title
 userName=Username
 password=Password
@@ -12,6 +10,11 @@ location=location
 description = Description
 contact=Contact
 type=Type
+add=Add
+back=Back
+save=Save
+
+
 apptTitle=Appt Title
 apptType=Appt Type
 startDate = Start Date
@@ -77,7 +80,8 @@ customers=Customers
 reports=Reports
 totalAppts=Total Appointments Report
 contactsSchedule=Contact Schedule Report
-customerActivity=Customer Activity Report
+contacts=Contacts
+customerSchedule=Total Appointments for each Customer ID
 generateReport=Generate Report
 
 createAppt=Create Appointment
@@ -86,12 +90,10 @@ deleteAppt= Delete Appointment
 apptCreated=Appointment successfully created!
 apptUpdated=Successfully updated appointment!
 apptDeleted = Successfully deleted appointment!
+
 customerUpdated=Successfully updated customer!
 customerDeleted=Successfully deleted customer!
 customerCreated=Customer successfully created!
-
-
-
 createCustomer = Create Customer
 updateCustomer = Update Customer
 deleteCustomer = Delete Customer
@@ -99,7 +101,7 @@ confirmDelete = Are you sure you want to delete?
 
 overlapping = Overlapping appointments
 overlap = Appointment you are trying to create overlaps with another existing appointment
-add = Add
-back = Back
-save = Save
 dateTimeError=Appointment End Date/Time is before the Start Date/Time. Please make sure appointment ends after start.
+chooseReport=Choose a report
+customerScheduleContext=Total number of appointments for each customer ID
+customerScheduleContext2=Format = Customer ID: # of appointments
