--- a/src/Resource/Language/language_fr.properties
+++ b/src/Resource/Language/language_fr.properties
@@ -3,8 +3,7 @@ language_en.properties
 country=pays
 timezone=Fuseau horaire
 subheader=WGU C195 Thaïs Ribeiro
-
-title=SE CONNECTER
+title=titre
 userName=Nom d'utilisateur
 password=Mot de passe
 location=emplacement
@@ -13,27 +12,32 @@ location=emplacement
 description = Description
 contact=Contact
 type=Taper
+add=Ajouter
+back=Retour
+save=Enregistrer
+apptTitle=Titre de l'appel
+apptType=Type d'appel
 startDate = Date de début
 endDate = Date de fin
 startTime= Heure de début
-endTime = Heure de début
-customerID = ID de client
+endTime=Heure de fin
+customerID=N ° de client
 userID= ID de l'utilisateur
-apptID= ID d'application
+apptID=ID d'application
 allAppts = Tous les rendez-vous
 byMonth = Rendez-vous ce mois-ci
 byWeek = Rendez-vous cette semaine
-searchButton = Recherche
-searchText = recherche par ID, titre, lieu....
 filterLabel = Filtrer les rendez-vous
 actionsLabel = Actions
-name = nom
+name=Nom
+address=Adresse
 postal = Code Postal
+division=Division
 phone = Numéro de téléphone
-address = Adresse
 appts = Rendez-vous
-
-
+month=Mois
+totalApptsLabel=Nombre total de rendez-vous
+appointmentsByCustomerID=Nombre total de rendez-vous par numéro de client
 login=se connecter
 cancel=Annuler
 cancelConfirmation=Souhaitez-vous sortir ?
@@ -41,65 +45,57 @@ usernameRequired=Nom d'utilisateur est nécessaire
 passwordRequired=Mot de passe requis
 usernameAndPasswordRequired=Le nom d'utilisateur et le mot de passe sont requis.
 error=Erreur
-
+information=Info
 invalidUsernamePassword=Le nom d'utilisateur et / ou le mot de passe est incorrect
-
-
-appointmentAlert=Alerte de rendez-vous à venir
+loadScreenError=Erreur d'écran de chargement
+appointmentAlert=Alerte rendez-vous à venir
 noUpcomingAppointments= Aucun rendez-vous à venir dans les 15 minutes
-lessThanFifteen=Le rendez-vous commence dans moins de 15 minutes
-
-
+lessThanFifteen=Rendez-vous à venir dans les 15 prochaines minutes !!
 appointmentID=Numéro de rendez-vous :
 date=Date:
 time=Temps:
 
 errorSaving=Erreur lors de l'enregistrement
-errorUpdating = Erreur lors de la mise à jour du rendez-vous
-errorCreatingCustomer = Erreur lors de la création du client
-noApptSelected  Veuillez sélectionner un rendez-vous à mettre à jour.
-errorDeleting = Erreur lors de la suppression du rendez-vous
+noApptSelected=Veuillez sélectionner un rendez-vous à mettre à jour.
+noCustomersSelected=Veuillez sélectionner un client à mettre à jour.
+errorUpdating=Erreur de mise à jour
+errorDeleting=Erreur de suppression
 errorDeletingAppt=Veuillez choisir un rendez-vous à supprimer
-
-fillInAllFieldsError = Veuillez vous assurer que tous les champs sont renseignés
-Champs manquants
-noCustomersSelected = Veuillez sélectionner un client à mettre à jour.
-
+errorCreatingCustomer=Erreur lors de la création du client
+businessHourError=L'heure de rendez-vous sélectionnée est en dehors des heures de bureau /n Les heures de bureau sont de 8h00 à 22h00, heure de l'Est
+fillInAllFieldsError=Veuillez vous assurer que tous les champs sont renseignés
+fillInAllFieldsErrorTitle=Champs manquants
 countryAndDivisionSelectionMissingTitle = Pays ou division manquant
-countryAndDivisionSelectionMissingTitleError = Veuillez vous assurer d'avoir sélectionné un pays et une division
-
+countryAndDivisionSelectionMissingTitleError=Veuillez vous assurer d'avoir sélectionné un pays et une division.
+selectCustomer="Veuillez sélectionner un client à supprimer"
+contactSchedule=Calendrier des contacts
 
 appointments=Rendez-vous
 customers=Clientes
 reports=Rapports
+totalAppts=Rapport sur le total des rendez-vous
+contactsSchedule=Rapport sur le calendrier des contacts
+contacts=Contacts
+customerSchedule=Nombre total de rendez-vous pour chaque numéro de client
+generateReport=Générer un rapport
 
 createAppt=Créer un rendez-vous
 updateAppt=Mettre à jour le rendez-vous
 deleteAppt= Supprimer le rendez-vous
 apptCreated=Rendez-vous créé avec succès!
-apptUpdate = Rendez-vous mis à jour avec succès!
+apptUpdated=Rendez-vous mis à jour avec succès!
 apptDeleted = Rendez-vous supprimé avec succès!
-
-createCustomer =Créer un client
-updateCustomer =Mettre à jour le client
-deleteCustomer =Supprimer le client
-customerCreated =Client créé !
-customerUpdated =Client mis à jour !
-customerDeleted =Client supprimé !
-totalAppts=Rapport sur le total des rendez-vous
-contactsSchedule=Rapport sur le calendrier des contacts
-customerActivity=Rapport d'activité client
-month=Mois
-totalApptsLabel=Totale Rendez-vous
-generateReport=Générer un rapport
-
-
+customerUpdated=Client mis à jour avec succès!
+customerDeleted=Client supprimé avec succès!
+customerCreated=Client créé avec succès!
+createCustomer=Créer un client
+updateCustomer=Mettre à jour le client
+deleteCustomer=Supprimer le client
 
 confirmDelete = Etes-vous sûr que vous voulez supprimer?
-
-overlapping = Des rendez-vous qui se chevauchent
+overlapping=Des rendez-vous qui se chevauchent
 overlap = Rendez-vous pour lequel vous essayez de créer des chevauchements avec un autre rendez-vous existant
-add = ajouter
-back =dos
-save = sauvegarder
 dateTimeError=La date/heure de fin du rendez-vous est antérieure à la date/heure de début. Veuillez vous assurer que le rendez-vous se termine après le début.
+chooseReport=Choisissez un rapport
+customerScheduleContext=Nombre total de rendez-vous pour chaque numéro client
+customerScheduleContext2=Format = Numéro client: # de rendez-vous
